--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             height: 300px;
             border: 1px solid #333;
             margin-bottom: 10px;
+            overflow: scroll;
+        }
+        .username {
+            color: red;
         }
     </style>
 </head>
@@ -32,13 +36,16 @@
         });
 
         $('#btn').click(function(){
+            var username = "<span class='username'>You: </span>"
             var msg = $('#textbox').val();
 
             $('#textbox').val("");
 
             var prevState = $("#container").html();
 
-            $('#container').html(prevState + "<br/>" + msg);
+            $('#container').html(prevState  + "<br/>" + username  + msg);
+
+            $('#container').scrollTop($("#container").prop("scrollHeight"));
         });
        
      });
